--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1173,7 +1173,7 @@
     Height="30"
     materialDesign:ButtonAssist.CornerRadius="10"
     ToolTip="MaterialDesignRaisedButton with Round Corners"
-    IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}" Click="Button_Click_1">
+    IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}">
                                                 <TextBlock
       Text="LOG OUT" />
                                             </Button>
