update storage and order

--- a/ProductDetailsControl.xaml
+++ b/ProductDetailsControl.xaml
@@ -14,69 +14,54 @@
     
     Width="auto" 
     Height="auto" 
-    Margin="0,10,0,10">
+    Margin="0,20,0,10">
     <Grid 
         Background="White">
         <Grid.ColumnDefinitions>
-            
-            <ColumnDefinition Width="3*"></ColumnDefinition>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
+
+            <ColumnDefinition Width="1.75*"></ColumnDefinition>
+            <ColumnDefinition Width="0.75*"></ColumnDefinition>
+            <ColumnDefinition Width="0.75*"></ColumnDefinition>
+            <ColumnDefinition Width="0.75*"></ColumnDefinition>
+            <ColumnDefinition Width="1.5*"></ColumnDefinition>
             <ColumnDefinition Width="40"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         
-        <TextBlock 
-            x:Name="txbIdGoods" 
-            Text="{Binding idbuyinginfo}"
-            Grid.Column="0" 
-            Visibility="Hidden"
-            
-             />
-        <TextBlock 
-            x:Name="txbIdBill" 
-            Grid.Column="0" 
-            Text="1" 
-            Visibility="Hidden" />
-        <TextBlock 
-            x:Name="txbPriceSingle" 
-            Grid.Column="0" 
-            Text="{Binding price}"
-            
-            Visibility="Hidden" />
-        <TextBlock 
+        
+        
+        
+        <TextBlock  
             x:Name="txbName" 
-            Text="{Binding name}" 
+            Text="{Binding good.name}" 
             TextTrimming="WordEllipsis"
             Grid.Column="0" 
             HorizontalAlignment="Left" 
-            Margin="20,0,0,0" 
+            Margin="10,0,0,0" 
             TextWrapping="Wrap" 
             VerticalAlignment="Center" 
-            FontSize="16"
+            FontSize="15"
             FontWeight="SemiBold"
             />
         <Button Height="auto" Width="auto" FontSize="20" Grid.Column="1" Content="-" 
                 Command="{Binding Path=DataContext.MinusCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding}"/>
         <Border BorderThickness="1" CornerRadius="3" Grid.Column="2" BorderBrush="Black" Margin="4">
-            <TextBox 
+            <TextBlock 
             x:Name="tb_main"
             Margin="0 "
             FontSize="16" TextWrapping="Wrap" 
-             
-                 IsTabStop="False"
+            
+                 
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center" 
                 PreviewTextInput="tb_main_PreviewTextInput"
-            FontWeight="SemiBold"  Text="{Binding quantity}" KeyDown="tb_main_KeyDown" MouseLeave="tb_main_MouseLeave"
+            FontWeight="SemiBold"  Text="{Binding quantity}" 
                 />
         </Border>
         <Button Height="auto" Width="auto" Grid.Column="3" Content="+" 
                 Command="{Binding Path=DataContext.PlusCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ItemsControl}}}" CommandParameter="{Binding}"/>
         <TextBlock 
             x:Name="txbPrice" 
-            Text="{Binding order_price}" 
+            Text="{Binding orderprice, StringFormat= {}{0:N0} }" 
             Grid.Column="4" 
             HorizontalAlignment="Right" 
             Margin="0,0,0,0" 
