--- a/SellGoodsControl.xaml
+++ b/SellGoodsControl.xaml
@@ -31,13 +31,16 @@
         <Border
             
         
-        Background="Pink" 
+        Background="white" 
         BorderBrush="white"
         Width="180" 
         Height="200" 
         BorderThickness="1" 
         CornerRadius="4">
-            <Grid Cursor="Hand" >
+        <Border.Effect>
+            <DropShadowEffect Color="#FFD8AFF4" BlurRadius="30" ShadowDepth="0"/>
+        </Border.Effect>
+        <Grid Cursor="Hand" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="130"></RowDefinition>
                     <RowDefinition Height="40"></RowDefinition>
@@ -61,10 +64,11 @@
                 Height="0" 
                 Width="0"/>
                 <Image x:Name="imgGood" 
+                       Source="{Binding imageFile}"
                 Grid.Row="0"
                 HorizontalAlignment="Center" 
                 VerticalAlignment="Top" 
-                Margin="0,1,0,0"/>
+                Margin="0,10,0,0"/>
                 <ItemsControl >
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
@@ -95,7 +99,7 @@
                 TextAlignment="Center"/>
                 <TextBlock 
                 Name="txbPrice"
-                Text="{Binding price}" 
+                Text="{Binding price, StringFormat= {}{0:N0}}" 
                 TextTrimming="WordEllipsis" 
                 HorizontalAlignment="Center"
                 Margin="20,5,20,0" 
