--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -678,7 +678,7 @@
                             </Button>
                         </Grid>
                         <Grid Grid.Column="0" Grid.Row="2">
-                            <Button x:Name="VL_billbtb" HorizontalAlignment="Center" Height="auto" VerticalAlignment="Center" Width="120" Click="Button_Click"
+                            <Button x:Name="VL_billbtb" HorizontalAlignment="Center" Height="auto" VerticalAlignment="Center" Width="120"
                                         Command="{Binding ShowWindowCommand_VL}"
                             >
                                 <Grid>
